# nano-tabpfn-jax

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  experiment.ipynb  model.py  pyproject.toml  train.py
.github/workflows/: docker-publish.yaml  pytest.yaml  ruff.yaml
example/: configs.py  main.py  stores.py
example/tests/: test_example.py
ml_project_template/: config.py  runs.py  utils.py  wandb.py
models/: common.py  v2.py  v3.py
tests/: test_classifier.py  test_decoder.py  test_feature_encoder.py  test_full_model.py  test_target_encoder.py  test_transformer_layer.py
torch_impl/: model.py  train.py
